versions/3.5.1/docs/ElementsUserProfile.md
# ElementsUserProfile


## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **int** |  | 
**username** | **str** |  | [readonly] 
**unix_username** | **str** |  | [readonly] 
**display_name** | **str** |  | [readonly] 
**email** | **str** |  | [readonly] 
**ldap** | [**LDAPServer**](LDAPServer.md) |  | 
**effective_permissions** | **[str, none_type]** |  | [readonly] 
**has_password** | **bool** |  | [readonly] 
**allow_changing_password** | **bool** |  | [readonly] 
**avatar** | **str, none_type** |  | [optional] 
**default_page** | **str** |  | [optional] 
**full_name** | **str, none_type** |  | [optional] 
**language** | **str, none_type** |  | [optional] 
**fm_bookmarks** | **[str, none_type]** |  | [optional] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


